[workspace]
members = [
  "cairo",
  "cairo/sys",
  "gdk-pixbuf",
  "gdk-pixbuf/sys",
  "gio",
  "gio/sys",
  "glib-build-tools",
  "glib",
  "glib/gobject-sys",
  "glib/sys",
  "glib-i18n",
  "glib-macros",
  "graphene",
  "graphene/sys",
  "examples",
  "pango",
  "pango/sys",
  "pangocairo",
  "pangocairo/sys",
]

exclude = ["gir", "checker"]
